- fix logo responsivenss in xs mode - fix footer alignment

--- a/css/traffc.css
+++ b/css/traffc.css
@@ -13,7 +13,9 @@
 }
 
 .footer-info .brand {
-    padding: 7px 15px;
+    padding: 3px 15px;
+    height: 32px !important;
+    line-height: normal !important;
 }
 
 .x-large {
